fix: guide content overflow click blocking

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -576,6 +576,7 @@ main {
 
 .get-started {
     > .card-body {
+        overflow: hidden;
         position: relative;
         
         &:after {
